-
Type:
Bug
-
Resolution: Done
-
Priority:
Major - P3
-
Affects Version/s: 2.6.0-rc2
-
Component/s: Replication
-
None
-
Fully Compatible
-
ALL
-
RPL 0 3/13/15
-
None
-
None
-
None
-
None
-
None
-
None
-
None
You cannot set slaveOk on the connection between the server and the secondary from which it would clone the database.
There is testing in place for this in jstests/replsets/cloneDb.js, which should be uncommented upon completion of this ticket.