SERVER-13357 add slaveOk argument to clone