src/mongo/db/commands/clone.cpp
@@ -72,7 +72,7 @@ namespace mongo {
 
         virtual void help( stringstream &help ) const {
             help << "clone this database from an instance of the db on another host\n";
-            help << "{ clone : \"host13\" }";
+            help << "{clone: \"host13\"[, slaveOk: <bool>]}";
         }
 
         virtual Status checkAuthForCommand(ClientBasic* client,
@@ -103,6 +103,7 @@ namespace mongo {
             CloneOptions opts;
             opts.fromDB = dbname;
             opts.logForRepl = ! fromRepl;
+            opts.slaveOk = cmdObj["slaveOk"].trueValue();
 
             // See if there's any collections we should ignore
             if( cmdObj["collsToIgnore"].type() == Array ){
